Improve sable behaviour